2004-09-12  Szabolcs Ban <shooby@gnome.hu>
	* gkb.c: little cosmetics for flag mode, default theme is label
        mode, I want to make PC applet :)

2004-09-12  Szabolcs Ban <shooby@gnome.hu>
	* GNOME_GKBApplet.server.in.in: new file for .server applet stuff
	* gkb-applet.c: Factory code for woring with applet chooser
	* Makefile.am: Executable from shlib, .server file and cleanup

2004-08-24  Davyd Madeley  <davyd@madeley.id.au>

	* descs/ES_Spanish-x86.keyprop.desktop.in:
	* descs/Hungarian-x86.keyprop.desktop.in:
	* descs/UK-x86.keyprop.desktop.in: Remove trailing spaces from keymap
	names. This does not break string freeze. Patch from Christian Rose
	<menthos@menthos.com>. Closes #150890.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove reference to screen-exec.
	* gkb-applet.c: (cb_help): Use gnome_help_*.
	* prop-add.c: (response_cb): Same.
	* prop-map.c: (gkb_prop_map_help_clicked): Same
	* prop.c: (prophelp_cb): Same.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* keygrab.c: (init_xmaps): ANSIfication.
	* preset.c: (find_presets): ANSIfication.

2004-08-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gkb.c: (gkb_update), (gkb_new): Make gkb remember
	settings between logins.
	* gkb.schemas.in: Needed preference. Closes bug #119421.
	Patch by Leena Gunda (leena.gunda at wipro.com)

2004-06-18  Dennis Smit  <ds@nerds-incorporated.org>

	* preset.c: Remove extraneous #include <dirent.h>. Should
	
	Patch by: Kjartan Maraas  <kmaraas@gnome.org>

	Fixes bug #124429.

2004-06-03  Szabolcs Ban <shooby@gnome.hu>

       * descs/BY_Belarussian.keyprop.in, descs/presets.xml.in,
         descs.sun/Sun_BY_Belarussian.keyprop.in,
         descs.sun/presets.xml.in: Fix a typo.
         Fixes bug #120758 
	 Fix provided by Kaushal Kumar <kaushal.kumar@wipro.com>

2004-05-28  Leena Gunda  <leena.gunda@wipro.com>

	* gkb-applet.c:
	(gkb_applet_shutdown), (gkb_update_handlers):
	Fix the warning when removing gkb applet from panel.
	Fixes bug 143277