@@ -1,8 +1,9 @@
 <gconfschemafile>
     <schemalist>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/num</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/num</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/num</applyto>
+            <owner>gkb_applet2</owner>
             <type>int</type>
             <default>10</default>
             <locale name="C">
@@ -11,8 +12,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/small</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/small</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/small</applyto>
+            <owner>gkb_applet2</owner>
             <type>bool</type>
             <default>true</default>
             <locale name="C">
@@ -20,18 +22,20 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/mode</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/mode</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/mode</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
-            <default>Flag and Label</default>
+            <default>Label</default>
             <locale name="C">
                 <short>Appearance mode of the applet</short>
                 <long>It can be "Flag and Label", "Label" or "Flag"</long>
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/key</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/key</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/key</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>Mod1-Shift_L</default>
             <locale name="C">
@@ -40,8 +44,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/name_0</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/name_0</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/name_0</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>US 105 key keyboard (with windows keys)</default>
             <locale name="C">
@@ -50,8 +55,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/label_0</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/label_0</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/label_0</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>us</default>
             <locale name="C">
@@ -60,8 +66,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/country_0</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/country_0</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/country_0</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>United States</default>
             <locale name="C">
@@ -70,8 +77,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/lang_0</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/lang_0</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/lang_0</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>English</default>
             <locale name="C">
@@ -80,8 +88,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/flag_0</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/flag_0</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/flag_0</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>us.png</default>
             <locale name="C">
@@ -90,8 +99,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/command_0</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/command_0</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/command_0</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>gkb_xmmap us</default>
             <locale name="C">
@@ -100,8 +110,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/name_1</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/name_1</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/name_1</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>Hungarian 105 keys latin2</default>
             <locale name="C">
@@ -110,8 +121,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/label_1</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/label_1</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/label_1</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>hu</default>
             <locale name="C">
@@ -120,8 +132,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/country_1</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/country_1</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/country_1</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>Hungary</default>
             <locale name="C">
@@ -130,8 +143,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/lang_1</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/lang_1</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/lang_1</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>Hungarian</default>
             <locale name="C">
@@ -140,8 +154,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/flag_1</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/flag_1</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/flag_1</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>hu.png</default>
             <locale name="C">
@@ -150,8 +165,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/command_1</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/command_1</key>
+            <applyto>/desktop/gnome/peripherals/keyboard/layout/command_1</applyto>
+            <owner>gkb_applet2</owner>
             <type>string</type>
             <default>gkb_xmmap hu</default>
             <locale name="C">
@@ -160,8 +176,9 @@
             </locale>
         </schema>
         <schema>
-            <key>/schemas/apps/gkb-applet/prefs/current</key>
-            <owner>gkb-applet</owner>
+            <key>/schemas/desktop/gnome/peripherals/keyboard/layout/current</key>
+	    <applyto>/desktop/gnome/peripherals/keyboard/layout/current</applyto>
+            <owner>gkb_applet2</owner>
             <type>int</type>
             <default>0</default>
             <locale name="C">
