@@ -1,8 +1,14 @@
 2004-09-12  Szabolcs Ban <shooby@gnome.hu>
+
+	* gkb.schemas.in: fixing schemas, too...
+
+2004-09-12  Szabolcs Ban <shooby@gnome.hu>
+
 	* gkb.c: little cosmetics for flag mode, default theme is label
         mode, I want to make PC applet :)
 
 2004-09-12  Szabolcs Ban <shooby@gnome.hu>
+
 	* GNOME_GKBApplet.server.in.in: new file for .server applet stuff
 	* gkb-applet.c: Factory code for woring with applet chooser
 	* Makefile.am: Executable from shlib, .server file and cleanup
